--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Missão programação do zero
-  </title>
-</head>
-<body>
-    <div>
-       <span>00</span>
-       <span>:</span>
-       <span>00</span>
-       <span>:</span>
-       <span>00</span>
-       <span>:</span>
-       <span>00</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./styles.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Missão programação do zero</title>
+  </head>
+  <body>
+    <div id="caixa-numeros">
+      <span class="numeros">00</span>
+      <span class="numeros">:</span>
+      <span class="numeros">00</span>
+      <span class="numeros">:</span>
+      <span class="numeros">00</span>
+      <span class="numeros">:</span>
+      <span class="numeros">00</span>
     </div>
-    <div>
-      <button>start</button>
-      <button>stop</button>
-      <button>reset</button>
+    <div id="caixa-botoes">
+      <button class="botoes">start</button>
+      <button class="botoes">stop</button>
+      <button class="botoes">reset</button>
     </div>
-</body>
-
+  </body>
 </html>
