--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <span class="numeros">:</span>
       <span class="numeros">00</span>
       <span class="numeros">:</span>
-      <span class="numeros">00</span>
+      <span class="numeros
+      numero-verde">00</span>
     </div>
     <div id="caixa-botoes">
       <button class="botoes">start</button>
