2 files modified, 1 deleted

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
       numero-verde">00</span>
     </div>
     <div id="caixa-botoes">
-      <button class="botoes">start</button>
+      <button class="botoes"
+      id="start">start</button>
       <button class="botoes">stop</button>
       <button class="botoes">reset</button>
     </div>
   </body>
+  <script>
+       let btnStart = document.getElementById("start")
+
+      btnStart.addEventListener("click",)
+
+  </script>
+
+
+
 </html>
